--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "fetch": "^1.1.0",
     "node-fetch": "^2.6.1",
+    "typo-js": "^1.2.0",
     "watchify": "^4.0.0"
   }
 }
