--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.0.6",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "performance": "^1.4.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
